Update the accessibility

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
 
-  <div class="masthead">
+  <header role="banner" class="masthead">
     <h1>
-      <img src="images/logo.svg">
+      <img src="images/logo.svg" alt="logo of an anchor">
       <span>Arrrgene’s Treasure Tours</span>
     </h1>
-    <div class="nav" role="navigation">
+    <nav class="nav" role="navigation">
       <ul>
         <li><a href="#">Tours</a></li>
         <li><a href="#">Ships</a></li>
         <li><a href="#">Tickets</a></li>
       </ul>
-    </div>
-  </div>
+    </nav>
+  </header>
 
-  <div role="main">
+  <main role="main">
 
     <div class="banner">
-      <img src="images/banner.jpg">
+      <img src="images/banner.jpg" alt="brown map background">
       <div>
         <h2>Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
@@ -36,18 +36,18 @@
 
     <div class="ship">
       <div class="card">
-        <img src="images/ship.svg">
+        <img src="images/ship.svg" alt="brown ship with flags">
         <h2>Heave Ho!</h2>
         <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
         <a href="#">See the specs</a>
       </div>
     </div>
 
-  </div>
+  </main>
 
-  <div class="footer">
+  <footer role="contentinfo" class="footer">
     <p>© Arrrgene’s Treasure Tours</p>
-  </div>
+  </footer>
 
 </body>
 </html>
