--- a/index.html
+++ b/index.html
@@ -25,23 +25,27 @@
 
   <main role="main">
 
-    <div class="banner">
-      <img src="images/banner.jpg" alt="brown map background">
-      <div>
-        <h2>Ahoy, me Hearties!</h2>
-        <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-        <a href="#">Book a tour</a>
-      </div>
-    </div>
+    <section>
 
-    <div class="ship">
-      <div class="card">
-        <img src="images/ship.svg" alt="brown ship with flags">
-        <h2>Heave Ho!</h2>
-        <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-        <a href="#">See the specs</a>
-      </div>
-    </div>
+      <article class="banner">
+        <img src="images/banner.jpg" alt="brown map background">
+        <div>
+          <h2>Ahoy, me Hearties!</h2>
+          <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+          <a href="#">Book a tour</a>
+        </div>
+      </article>
+
+      <article class="ship">
+        <div class="card">
+          <img src="images/ship.svg" alt="brown ship with flags">
+          <h2>Heave Ho!</h2>
+          <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
+          <a href="#">See the specs</a>
+        </div>
+      </article>
+
+    </section>
 
   </main>
 
